--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -22,6 +22,10 @@ jobs:
           # You can also specify a specific Flutter version if needed:
           # flutter-version: '3.19.0'
 
+      - name: Create .env file
+        run: echo "${{ secrets.GEMINI_API_KEY }}" > .env
+        working-directory: ${{ github.workspace }}
+
       # Step 3: Get Flutter project dependencies
       - name: Get Flutter dependencies
         run: flutter pub get
